# outlook-kb-autoresponder

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: plan.md
instances/sales/: .env.example
instances/sales/knowledge_base/: README.md
instances/support/: .env.example
instances/support/knowledge_base/: README.md
knowledge_base/: README.md  sample-faq.md
outlook_autoresponder/: config.py  graph_client.py  kb.py  models.py  policy.py  responder.py  runner.py  storage.py
samples/: pricing_email.json  support_issue_email.json
scripts/: bootstrap_venv.sh  install.sh  run_once.py  test_reply.py
systemd/: outlook-autoresponder-all.service  outlook-autoresponder@.service
