[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-kb-autoresponder"
version = "0.1.0"
description = "Outlook autoresponder with KB-backed reply drafting"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["outlook_autoresponder*"]
